# Some programs need the math library.
find_library(M_LIBRARY m)
if(NOT M_LIBRARY)
    set(M_LIBRARY "")
endif()

########################################
# FUNCTION add_prog_target
########################################
function(add_prog_target target)
    set                             (${target}_src ${target}.c "${ARGN}")
    add_executable                  (${target} ${${target}_src})
    string(FIND ${target} "gif" GIF_TEST_FOUND)
    if (GIF_TEST_FOUND EQUAL 0)
        # gif_lib.h is not found on Windows
        target_include_directories  (${target} PRIVATE ${GIF_INCLUDE_DIR})
    endif()
    if (BUILD_SHARED_LIBS)
        target_compile_definitions  (${target} PRIVATE -DLIBLEPT_IMPORTS)
    endif()
    target_link_libraries           (${target} leptonica ${M_LIBRARY})
    set_target_properties           (${target} PROPERTIES FOLDER prog)
endfunction(add_prog_target)
########################################

########################################
# FUNCTION add_test_target
########################################
function(add_test_target test)
    set (${test}_src "${ARGN}")
    add_prog_target(${test} ${${test}_src})
    set(${test}_exe $<PATH:RELATIVE_PATH,$<TARGET_FILE:${test}>,${CMAKE_CURRENT_BINARY_DIR}>)
    add_test(NAME ${test} COMMAND sh $<PATH:APPEND,${CMAKE_CURRENT_SOURCE_DIR},reg_wrapper.sh> ${${test}_exe})
    set_property(TEST ${test} PROPERTY SKIP_RETURN_CODE 77)
endfunction(add_test_target)
########################################

if(BUILD_PROG)

    add_prog_target(adaptmap_dark)
    add_prog_target(arabic_lines)
    add_prog_target(arithtest)
    add_prog_target(autogentest1)
    add_prog_target(autogentest2 autogen.137.c)
    add_prog_target(barcodetest)
    add_prog_target(binarize_set)
    add_prog_target(binarizefiles)
    add_prog_target(bincompare)
    add_prog_target(blendcmaptest)
    add_prog_target(buffertest)
    add_prog_target(ccbordtest)
    add_prog_target(cctest1)
    add_prog_target(cleanpdf)
    add_prog_target(colorsegtest)
    add_prog_target(comparepages)
    add_prog_target(comparepixa)
    add_prog_target(comparetest)
    add_prog_target(compresspdf)
    add_prog_target(contrasttest)
    add_prog_target(convertfilestopdf)
    add_prog_target(convertfilestops)
    add_prog_target(convertformat)
    add_prog_target(convertsegfilestopdf)
    add_prog_target(convertsegfilestops)
    add_prog_target(converttogray)
    add_prog_target(converttopdf)
    add_prog_target(converttops)
    add_prog_target(cornertest)
    add_prog_target(corrupttest)
    add_prog_target(croppdf)
    add_prog_target(croptext)
    add_prog_target(deskew_it)
    add_prog_target(dewarprules)
    add_prog_target(dewarptest1)
    add_prog_target(dewarptest2)
    add_prog_target(dewarptest3)
    add_prog_target(dewarptest4)
    add_prog_target(dewarptest5)
    add_prog_target(digitprep1)
    add_prog_target(displayboxa)
    add_prog_target(displayboxes_on_pixa)
    add_prog_target(displaypix)
    add_prog_target(displaypixa)
    add_prog_target(dwalineargen)
    add_prog_target(fcombautogen)
    add_prog_target(fhmtautogen)
    add_prog_target(fileinfo)
    add_prog_target(find_colorregions)
    add_prog_target(findbinding)
    add_prog_target(findpattern1)
    add_prog_target(findpattern2)
    add_prog_target(findpattern3)
    add_prog_target(fmorphautogen)
    add_prog_target(fpixcontours)
    add_prog_target(gammatest)
    add_prog_target(graphicstest)
    add_prog_target(graymorphtest)
    add_prog_target(hashtest)
    add_prog_target(histoduptest)
    add_prog_target(histotest)
    add_prog_target(htmlviewer)
    add_prog_target(imagetops)
    add_prog_target(jbcorrelation)
    add_prog_target(jbrankhaus)
    add_prog_target(jbwords)
    add_prog_target(lightcolortest)
    add_prog_target(listtest)
    add_prog_target(livre_adapt)
    add_prog_target(livre_hmt)
    add_prog_target(livre_makefigs)
    add_prog_target(livre_orient)
    add_prog_target(livre_pageseg)
    add_prog_target(livre_seedgen)
    add_prog_target(livre_tophat)
    add_prog_target(maketile)
    add_prog_target(maptest)
    add_prog_target(messagetest)
    add_prog_target(misctest1)
    add_prog_target(modifyhuesat)
    add_prog_target(morphtest1)
    add_prog_target(numaranktest)
    add_prog_target(otsutest1)
    add_prog_target(otsutest2)
    add_prog_target(pagesegtest1)
    add_prog_target(pagesegtest2)
    add_prog_target(partifytest)
    add_prog_target(partitiontest)
    add_prog_target(percolatetest)
    add_prog_target(pixaatest)
    add_prog_target(pixafileinfo)
    add_prog_target(plottest)
    add_prog_target(printimage)
    add_prog_target(printsplitimage)
    add_prog_target(printtiff)
    add_prog_target(rasteroptest)
    add_prog_target(rbtreetest)
    add_prog_target(recog_bootnum1)
    add_prog_target(recog_bootnum2)
    add_prog_target(recog_bootnum3)
    add_prog_target(recogsort)
    add_prog_target(recogtest1)
    add_prog_target(recogtest2)
    add_prog_target(recogtest3)
    add_prog_target(recogtest4)
    add_prog_target(recogtest5)
    add_prog_target(recogtest6)
    add_prog_target(recogtest7)
    add_prog_target(reducetest)
    add_prog_target(removecmap)
    add_prog_target(renderfonts)
    add_prog_target(replacebytes)
    add_prog_target(rotate_it)
    add_prog_target(rotatefastalt)
    add_prog_target(rotateorthtest1)
    add_prog_target(rotatetest1)
    add_prog_target(runlengthtest)
    add_prog_target(scale_it)
    add_prog_target(scaleandtile)
    add_prog_target(scaleimages)
    add_prog_target(scaletest1)
    add_prog_target(scaletest2)
    add_prog_target(seedfilltest)
    add_prog_target(settest)
    add_prog_target(sharptest)
    add_prog_target(sheartest)
    add_prog_target(showedges)
    add_prog_target(skewtest)
    add_prog_target(sorttest)
    add_prog_target(splitimage2pdf)
    add_prog_target(splitpdf)
    add_prog_target(sudokutest)
    add_prog_target(textorient)
    add_prog_target(tiffpdftest)
    add_prog_target(trctest)
    add_prog_target(underlinetest)
    add_prog_target(warpertest)
    add_prog_target(wordsinorder)
    add_prog_target(writemtiff)
    add_prog_target(xtractprotos)
    add_prog_target(yuvtest)

    set (INSTALL_PROGS
        convertfilestopdf convertfilestops
        convertformat convertsegfilestopdf convertsegfilestops
        converttopdf converttops fileinfo imagetops xtractprotos
    )

endif()

if(BUILD_TEST)

    # Automatic tests.
    add_test_target(adaptmap_reg)
    add_test_target(adaptnorm_reg)
    add_test_target(affine_reg)
    add_test_target(alphaops_reg)
    add_test_target(alphaxform_reg)
    add_test_target(baseline_reg)
    add_test_target(bilateral2_reg)
    add_test_target(bilinear_reg)
    add_test_target(binarize_reg)
    add_test_target(binmorph1_reg)
    add_test_target(binmorph3_reg)
    add_test_target(binmorph6_reg)
    add_test_target(blackwhite_reg)
    add_test_target(blend1_reg)
    add_test_target(blend2_reg)
    add_test_target(blend3_reg)
    add_test_target(blend4_reg)
    add_test_target(blend5_reg)
    add_test_target(boxa1_reg)
    add_test_target(boxa2_reg)
    add_test_target(boxa3_reg)
    add_test_target(boxa4_reg)
    add_test_target(bytea_reg)
    add_test_target(ccbord_reg)
    add_test_target(ccthin1_reg)
    add_test_target(ccthin2_reg)
    add_test_target(checkerboard_reg)
    add_test_target(circle_reg)
    add_test_target(cmapquant_reg)
    add_test_target(colorcontent_reg)
    add_test_target(colorfill_reg)
    add_test_target(coloring_reg)
    add_test_target(colorize_reg)
    add_test_target(colormask_reg)
    add_test_target(colormorph_reg)
    add_test_target(colorquant_reg)
    add_test_target(colorseg_reg)
    add_test_target(colorspace_reg)
    add_test_target(compare_reg)
    add_test_target(compfilter_reg)
    add_test_target(conncomp_reg)
    add_test_target(conversion_reg)
    add_test_target(convolve_reg)
    add_test_target(crop_reg)
    add_test_target(dewarp_reg)
    add_test_target(distance_reg)
    add_test_target(dither_reg)
    add_test_target(dna_reg)
    add_test_target(dwamorph1_reg dwalinear.3.c dwalinearlow.3.c)
    add_test_target(edge_reg)
    add_test_target(encoding_reg)
    add_test_target(enhance_reg)
    add_test_target(equal_reg)
    add_test_target(expand_reg)
    add_test_target(extrema_reg)
    add_test_target(falsecolor_reg)
    add_test_target(fhmtauto_reg)
    add_test_target(findcorners_reg)
    add_test_target(findpattern_reg)
    add_test_target(flipdetect_reg)
    add_test_target(fpix1_reg)
    add_test_target(fpix2_reg)
    add_test_target(genfonts_reg)
    add_test_target(grayfill_reg)
    add_test_target(graymorph1_reg)
    add_test_target(graymorph2_reg)
    add_test_target(grayquant_reg)
    add_test_target(hardlight_reg)
    add_test_target(hash_reg)
    add_test_target(heap_reg)
    add_test_target(insert_reg)
    add_test_target(ioformats_reg)
    add_test_target(iomisc_reg)
    add_test_target(italic_reg)
    add_test_target(jbclass_reg)
    add_test_target(jpegio_reg)
    add_test_target(kernel_reg)
    add_test_target(label_reg)
    add_test_target(lineremoval_reg)
    add_test_target(locminmax_reg)
    add_test_target(logicops_reg)
    add_test_target(lowaccess_reg)
    add_test_target(lowsat_reg)
    add_test_target(maze_reg)
    add_test_target(mtiff_reg)
    add_test_target(multitype_reg)
    add_test_target(nearline_reg)
    add_test_target(newspaper_reg)
    add_test_target(numa1_reg)
    add_test_target(numa2_reg)
    add_test_target(numa3_reg)
    add_test_target(overlap_reg)
    add_test_target(pageseg_reg)
    add_test_target(paint_reg)
    add_test_target(paintmask_reg)
    add_test_target(partition_reg)
    add_test_target(pdfio1_reg)
    add_test_target(pdfio2_reg)
    add_test_target(pdfseg_reg)
    add_test_target(pixa1_reg)
    add_test_target(pixa2_reg)
    add_test_target(pixadisp_reg)
    add_test_target(pixcomp_reg)
    add_test_target(pixmem_reg)
    add_test_target(pixserial_reg)
    add_test_target(pngio_reg)
    add_test_target(pnmio_reg)
    add_test_target(projection_reg)
    add_test_target(projective_reg)
    add_test_target(psio_reg)
    add_test_target(psioseg_reg)
    add_test_target(pta_reg)
    add_test_target(ptra1_reg)
    add_test_target(ptra2_reg)
    add_test_target(quadtree_reg)
    add_test_target(rank_reg)
    add_test_target(rankbin_reg)
    add_test_target(rankhisto_reg)
    add_test_target(rasterop_reg)
    add_test_target(rasteropip_reg)
    add_test_target(rectangle_reg)
    add_test_target(rotate1_reg)
    add_test_target(rotate2_reg)
    add_test_target(rotateorth_reg)
    add_test_target(scale_reg)
    add_test_target(seedspread_reg)
    add_test_target(selio_reg)
    add_test_target(shear1_reg)
    add_test_target(shear2_reg)
    add_test_target(skew_reg)
    add_test_target(smallpix_reg)
    add_test_target(speckle_reg)
    add_test_target(splitcomp_reg)
    add_test_target(string_reg)
    add_test_target(subpixel_reg)
    add_test_target(texturefill_reg)
    add_test_target(threshnorm_reg)
    add_test_target(translate_reg)
    add_test_target(warper_reg)
    add_test_target(watershed_reg)
    add_test_target(wordboxes_reg)
    add_test_target(writetext_reg)
    add_test_target(xformbox_reg)
    if(GIF_FOUND)
        add_test_target(gifio_reg)
    endif()
    if(OpenJPEG_FOUND)
        add_test_target(jp2kio_reg)
    endif()
    if(WebP_FOUND)
        add_test_target(webpanimio_reg)
        add_test_target(webpio_reg)
    endif()

    # Manual tests.
    add_prog_target(alltests_reg)
    add_prog_target(bilateral1_reg)
    add_prog_target(binmorph2_reg)
    add_prog_target(binmorph4_reg)
    add_prog_target(binmorph5_reg)
    add_prog_target(dwamorph2_reg dwalinear.3.c dwalinearlow.3.c)
    add_prog_target(files_reg)
    add_prog_target(fmorphauto_reg)
    add_prog_target(morphseq_reg)
    add_prog_target(pixalloc_reg)
    add_prog_target(pixtile_reg)
    add_prog_target(smoothedge_reg)

endif()

foreach(make_install ${INSTALL_PROGS})
    install(TARGETS ${make_install} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
endforeach()
